# LearnOpenGL

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.h.in  main.cpp  shader_s.h
cmake/: assimp.cmake  glad.cmake  glad_v1.cmake  glad_v2.cmake  glfw.cmake  glm.cmake  imgui.cmake  stb.cmake
include/: check_gl.h
v1/: triangle.cpp
v1/breakout/: CMakeLists.txt
v1/breakout/include/: game.h  shader.h
v1/breakout/src/: game.cpp  shader.cpp
